# Metis_Antique_Marketplace_Plus

./: .gitignore  CMakeLists.txt  README.md  config.pson  trust_cert.bat  trust_cert.cmd
certs/: server.crt
docs/: API.md  ARCHITECTURE.md  BACKGROUND.md  BILLING.md  BUILD_GUIDE.md  CHANGELOG.md  COMMERCIAL-TODO.md  COMPARISON.md  CONFIGURATION.md  DATABASE.md  DATA_MODEL.md  ENDPOINTS.md  HOWTO.md  IMPLEMENTATION-PLAN.md  LICENSE.txt  OPERATIONS.md  SUPPORT.md  TODO.md
openssl-prebuilt/windows/: README.txt
openssl-prebuilt/windows/lib/: PLACEHOLDER
server/: CMakeLists.txt
server/src/: app_appraisals.cpp  app_appraisals.hpp  app_audit.cpp  app_audit.hpp  app_auth.cpp  app_auth.hpp  app_business.cpp  app_business.hpp  app_comments.cpp  app_comments.hpp  app_items.cpp  app_items.hpp  app_listings.cpp  app_listings.hpp  app_market.cpp  app_market.hpp  app_photos.cpp  app_photos.hpp  app_pos.cpp  app_pos.hpp  app_purchases.cpp  app_purchases.hpp  app_sales.cpp  app_sales.hpp  app_sync.cpp  app_sync.hpp  db.cpp  db.hpp  logger.cpp  logger.hpp  main.cpp  pson.cpp  pson.hpp  router.cpp  router.hpp  server.cpp  server.hpp  smtp.cpp  smtp.hpp  types.hpp  (+4 more)
web/: index.html  shop.html
web/css/: app.css
web/js/: api.js  app.js  barcode.js  i18n.js  pages.js
web/js/pages/: audit.js  business.js  comments.js  dashboard.js  dealer.js  gallery.js  pos.js  purchases.js  qr.js
